--- a/Demands/1.md
+++ b/Demands/1.md
@@ -1,10 +1,10 @@
-## 新增发文页面 过滤表格样式（带链接）功能
+## 一、新增发文页面 过滤表格样式（带链接）功能
 需求：点击过滤表格样式，将样式去除，但是链接（a标签保留）
 
-页面：
+页面：<br>
 ![img.png](img.png)
 
-js：
+js：<br>
 ![img_1.png](img_1.png)
 
 初始代码：
