--- a/Demands/4.md
+++ b/Demands/4.md
@@ -6,35 +6,38 @@
 `https://gd.huatu.com/zt/2023znqlm/`
 
 
-![img_9.png](img_9.png)
+![img_9.png](img_9.png)<br>
 **index.js** <br>
 
 第一次点击 因为页面没有localStorage，所以会走到else那里，把.fixed_mask显示出来，
 这个逻辑：
+
 ![img_10.png](img_10.png)
 ![img_11.png](img_11.png)
-
+<br>
 **nc.js**<br>
 “获取验证码按钮”的逻辑在 
+
 ![img_12.png](img_12.png)
 ![img_13.png](img_13.png)
-
+<br>
 **login.js**<br>
 “预约领取”的按钮功能实现在这
-![img_14.png](img_14.png)
 
+![img_14.png](img_14.png)
+<br>
 
 在这个功能的最后一行添加一句存储缓存的代码（让他点击领取就存一次缓存）<br>
 ![img_15.png](img_15.png)
-
+<br>
 
 所以第二次点击的时候直接走这个逻辑，跳链接<br>
 ![img_16.png](img_16.png)
-
+<br>
 
 中间的login.js有两个重复的弹窗请求，删了一个（删了上面的那一个）<br>
 ![img_17.png](img_17.png)
-
+<br>
 
 
 
