--- a/Demands/10-浏览器跳小程序的弹窗也要根据ip显示二维码/10-浏览器跳小程序的弹窗也要根据ip显示二维码.md
+++ b/Demands/10-浏览器跳小程序的弹窗也要根据ip显示二维码/10-浏览器跳小程序的弹窗也要根据ip显示二维码.md
@@ -22,3 +22,27 @@ fromphone-html-one=> <br>
 https://gd.huatu.com/zt/js/fromphone-html-one.php?timerid <br>
 fromphone-html-one.php 修改这个php就好了 <br>
 
+one和one_backup是备份文件 <br>
+_finish和_xg一个是完成文件，一个是完成但是可以测试ip为香港的 <br>
+
+代码这里判断如果ip在广东才加那个选择框进去，
+
+```php
+ if (province == '广东省') {
+        var selectElement = document.createElement("select");
+        selectElement.id = "mySelect";
+        selectElement.onchange = selectcode;
+        document.getElementById("phoneshowsure").insertAdjacentElement("afterend", selectElement);
+   }
+```
+
+这里一打开页面不会显示对应ip的客服老师，所以多加了一句话 code = ...
+
+```php
+ // --根据城市代码默认显示哪个老师名字和二维码
+if (options[i].value === city_code) {
+    option.selected = true
+    code = 'https://gd.huatu.com/zt/gdhttg/dsggfjewm/' + city_code + '.png';
+    // console.log(city_code)
+}
+```
