--- a/Company Dailys/1分校服务器测试代码.md
+++ b/Company Dailys/1分校服务器测试代码.md
@@ -1,11 +1,11 @@
 ## 连接分校服务器并进行代码测试
 ## 1.win+R -> cmd ->输入 mstsc ->进行连接 <br>
-![img_21.png](img_21.png)
+![img_21.png](../Demands/img_21.png)
 <br>
 ### 直接把想要测试的文件夹拖入到**gdfx**这个目录下 <br>
 
 在浏览器输入:<br>
-![img_22.png](img_22.png)
+![img_22.png](../Demands/img_22.png)
 <br>
 ### 前面的域名一定要是 gdfx.huatu.com，然后再接文件夹
 <br>
