--- a/Company Dailys/2水淼文章，以及批量导入操作.md
+++ b/Company Dailys/2水淼文章，以及批量导入操作.md
@@ -30,7 +30,7 @@
 
 格式全部弄好之后就可以导入了 <br>
 
-文章批量导入专用链接，密码：2022huatu或者huatu2022 <br>
+文章批量导入专用链接，密码：2022huatu<br>
 http://172.23.0.125/uigfwereytEWrws/sys_url_dmm.html  <br>
 
 ##### 发文后台的‘所有导入列表’到时间会自动生成
