需求11暂时为完成

--- a/Demands/10-非微信浏览器领取附件跳小程序的弹窗也要根据ip显示二维码/10-浏览器跳小程序的弹窗也要根据ip显示二维码.md
+++ b/Demands/10-非微信浏览器领取附件跳小程序的弹窗也要根据ip显示二维码/10-浏览器跳小程序的弹窗也要根据ip显示二维码.md
@@ -1,6 +1,8 @@
 ## 十、非微信浏览器领取附件跳小程序的弹窗也要根据ip显示二维码
 
-### 需求描述：在浏览器打开网页领取附件，跳到微信小程序的时候，那个客服二维码设置成根据ip显示
+### 需求描述：在浏览器打开网页领取附件，跳到微信小程序的时候，那个客服二维码设置成根据ip显示 （浏览器端）
+
+### 只要是小程序领取附件都是根据ip显示，地市的链接也是
 
 <br>
 
