--- a/Demands/11-微信小程序环境领取附件也是根据ip显示二维码/11-微信小程序环境领取附件也是根据ip显示二维码.md
+++ b/Demands/11-微信小程序环境领取附件也是根据ip显示二维码/11-微信小程序环境领取附件也是根据ip显示二维码.md
@@ -1,7 +1,11 @@
-## 十一、微信小程序环境领取附件也是根据ip显示二维码，带zt也根据ip显示
+## 十一、微信小程序页面领取附件也是根据ip显示二维码，带zt也根据ip显示
 
 现在又多了一个（之前就有，我第一次见而已）<br>
 有一个微信小程序的页面（环境），现在需要在这个页面领取附件的二维码弹窗也显示根据ip显示二维码 <br>
+
+## 1.小程序里面的页面领取附件根据ip显示
+
+> 小程序里面的页面那个弹窗就是gdxcxfunction.js，加一个判断就可以实现和微信浏览器一样的弹窗了
 
 ### 网页领取附件js顺序：
 
@@ -41,6 +45,8 @@
 
 之前如果是小程序环境直接跳到xcxforminiprom1这个方法，所以是默认的弹窗 <br>
 
+### 只需要改gdxcxfunction.js就好了，gbk的哪一个不用改 <br>
+
 <div> <img src="img.png" width = 500 alt=""> </div> <br>
 
 修改后 <br>
@@ -68,5 +74,16 @@
 8. 否则 域名是对的gd.huatu.com，但是带有特殊标签 -> 默认弹窗
 9. ip在广东省，但不是gd.huatu.com的域名，即地市的域名 -> 默认弹窗
 10. 否则 ip不在广东省-> 默认弹窗
+
+### 两个js不再完全一样， 不同点在于上面的两处修改！
+
+## 2.（小程序端）带/zt/也根据ip显示
+
+> 跟上面的一样都是小程序环境，但这个是带/zt/的页面，单独在小程序端的弹窗，不再是gdxcxfunction.js控制的了,而是由gdxcxtk.js控制。
+
+是这个js控制的弹窗，现在也要根据ip显示！<br>
+`https://gd.huatu.com/zt/js/gdxcxtk.is ` <br>
+
+直接cv写好的就可以了！
 
 ## 至此完成
