--- a/Company Dailys/2水淼文章，以及批量导入操作.md
+++ b/Company Dailys/2水淼文章，以及批量导入操作.md
@@ -1,11 +1,11 @@
-## 一、水淼文章生成操作
+# 二、水淼文章生成操作
 
-<div> <img src="img.png" width = 500 alt=""> </div>
+<div> <img src="images/img.png" width = 500 alt=""> </div>
 <br>
 
 进入软件主页面,大致就是这么操作，选择合适的的元素填充进对应的模板，最后点预览，复制到后台发文页面预览页面效果。<br>
 每次修改模板或者元素的内容都要点击一次保存，ctrl+s保存好像没用
-<div> <img src="img_1.png" width = 600 alt=""> </div>
+<div> <img src="images/img_1.png" width = 600 alt=""> </div>
 <br>
 
 大量修改元素的内容可以使用编辑器编辑
@@ -23,8 +23,8 @@
 7.投稿时间那边复制一下模板的格式 <br>
 `=TEXT((TEXT(1*K2,"[s]")+1800+RANDBETWEEN(-5,5))/(24*60*60),"e-mm-dd hh:mm:ss")` <br>
 1800代表1800秒，也就是0.5h <br>
-<div> <img src="img_3.png" width = 200 alt=""> </div> <br>
-<div> <img src="img_2.png" width = 700 alt=""> </div> <br>
+<div> <img src="images/img_3.png" width = 200 alt=""> </div> <br>
+<div> <img src="images/img_2.png" width = 700 alt=""> </div> <br>
 
 
 
